--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -178,14 +178,14 @@
                 android:id="@+id/txt_home_poetry"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="SF/판타지"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="15dp"
+                android:text="시집"
+                android:textColor="@color/black"
                 android:textSize="20dp"
                 android:textStyle="bold"
-                android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/home_essay_hori_scrollView"
-                android:layout_marginTop="15dp"
-                android:layout_marginLeft="20dp"/>
+                app:layout_constraintTop_toBottomOf="@id/home_essay_hori_scrollView" />
 
             <HorizontalScrollView
                 android:id="@+id/home_poetry_hori_scrollView"
@@ -210,14 +210,14 @@
                 android:id="@+id/txt_home_history"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="액션"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="15dp"
+                android:text="역사"
+                android:textColor="@color/black"
                 android:textSize="20dp"
                 android:textStyle="bold"
-                android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/home_poetry_hori_scrollView"
-                android:layout_marginTop="15dp"
-                android:layout_marginLeft="20dp"/>
+                app:layout_constraintTop_toBottomOf="@id/home_poetry_hori_scrollView" />
 
             <HorizontalScrollView
                 android:id="@+id/home_history_hori_scrollView"
@@ -242,14 +242,14 @@
                 android:id="@+id/txt_home_philo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="코미디"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="15dp"
+                android:text="철학"
+                android:textColor="@color/black"
                 android:textSize="20dp"
                 android:textStyle="bold"
-                android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/home_history_hori_scrollView"
-                android:layout_marginTop="15dp"
-                android:layout_marginLeft="20dp"/>
+                app:layout_constraintTop_toBottomOf="@id/home_history_hori_scrollView" />
 
             <HorizontalScrollView
                 android:id="@+id/home_philo_hori_scrollView"
