--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -128,6 +128,19 @@
             android:layout_marginLeft="15dp"
             tools:listitem="@layout/item_search"/>
 
+        <TextView
+            android:id="@+id/tvRec"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/rvSearched"
+            app:layout_constraintStart_toStartOf="parent"
+            android:visibility="invisible"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:text="추천 작품들"
+            android:textSize="20sp"
+            android:textColor="@color/black"/>
+
         <HorizontalScrollView
             android:id="@+id/searchRecs"
             android:layout_width="match_parent"
