--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -136,5 +136,15 @@
         app:layout_constraintStart_toEndOf="@id/searchedPoster"
         app:layout_constraintTop_toBottomOf="@id/translation" />
 
-
+    <TextView
+        android:id="@+id/searchedISBN"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="5dp"
+        android:text="123"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintStart_toEndOf="@id/searchedPoster"
+        app:layout_constraintTop_toBottomOf="@id/searchedPublisher" />
 </androidx.constraintlayout.widget.ConstraintLayout>
