--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -16,33 +16,34 @@
 
     <TextView
         android:id="@+id/searchedTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
+        android:layout_marginTop="30dp"
         android:layout_marginBottom="5dp"
         android:text="이기적 유전자"
         android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/author"
-        app:layout_constraintStart_toEndOf="@id/searchedPoster" />
+        app:layout_constraintStart_toEndOf="@id/searchedPoster"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/years"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
+        android:layout_marginLeft="15dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="@id/searchedTitle"
-        app:layout_constraintStart_toEndOf="@id/searchedTitle">
+        app:layout_constraintStart_toEndOf="@id/searchedPoster"
+        app:layout_constraintTop_toBottomOf="@id/searchedTitle">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="("
+            android:text="발행일: "
             android:textColor="@color/black"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/searchedYear"
@@ -52,18 +53,10 @@
             android:text="2010"
             android:textColor="@color/black"
             android:textSize="18sp"
-            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/searchedPoster"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=")"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -71,11 +64,12 @@
         android:id="@+id/author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/searchedPoster"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/years"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="5dp"
+        >
 
         <TextView
             android:id="@+id/searchedAuthor"
@@ -95,34 +89,34 @@
 
     </LinearLayout>
 
-<!--    <LinearLayout-->
-<!--        android:id="@+id/translation"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="15dp"-->
-<!--        android:layout_marginLeft="15dp"-->
-<!--        android:layout_marginTop="5dp"-->
-<!--        android:orientation="horizontal"-->
-<!--        app:layout_constraintStart_toEndOf="@+id/searchedPoster"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/author">-->
+    <!--    <LinearLayout-->
+    <!--        android:id="@+id/translation"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_marginStart="15dp"-->
+    <!--        android:layout_marginLeft="15dp"-->
+    <!--        android:layout_marginTop="5dp"-->
+    <!--        android:orientation="horizontal"-->
+    <!--        app:layout_constraintStart_toEndOf="@+id/searchedPoster"-->
+    <!--        app:layout_constraintTop_toBottomOf="@+id/author">-->
 
-<!--        <TextView-->
-<!--            android:id="@+id/searchedTranslator"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="홍영남"-->
-<!--            android:textColor="@color/black"-->
-<!--            android:textSize="18sp" />-->
+    <!--        <TextView-->
+    <!--            android:id="@+id/searchedTranslator"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:text="홍영남"-->
+    <!--            android:textColor="@color/black"-->
+    <!--            android:textSize="18sp" />-->
 
-<!--        <TextView-->
-<!--            android:id="@+id/txt_translation"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text=" 옮김"-->
-<!--            android:textColor="@color/black"-->
-<!--            android:textSize="18sp" />-->
+    <!--        <TextView-->
+    <!--            android:id="@+id/txt_translation"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:text=" 옮김"-->
+    <!--            android:textColor="@color/black"-->
+    <!--            android:textSize="18sp" />-->
 
-<!--    </LinearLayout>-->
+    <!--    </LinearLayout>-->
 
     <TextView
         android:id="@+id/searchedPublisher"
