--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -34,6 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
+        android:layout_marginTop="5dp"
         android:orientation="horizontal"
         app:layout_constraintStart_toEndOf="@id/searchedPoster"
         app:layout_constraintTop_toBottomOf="@id/searchedTitle">
@@ -64,26 +65,25 @@
         android:id="@+id/author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintStart_toEndOf="@id/searchedPoster"
-        app:layout_constraintTop_toBottomOf="@id/years"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="5dp"
-        >
-
-        <TextView
-            android:id="@+id/searchedAuthor"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="리처드 도킨스"
-            android:textColor="@color/black"
-            android:textSize="18sp" />
+        android:orientation="horizontal"
+        app:layout_constraintStart_toEndOf="@id/searchedPoster"
+        app:layout_constraintTop_toBottomOf="@id/years">
 
         <TextView
             android:id="@+id/txt_author"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=" 지음"
+            android:text="저자: "
+            android:textColor="@color/black"
+            android:textSize="18dp" />
+
+        <TextView
+            android:id="@+id/searchedAuthor"
+            android:layout_width="170dp"
+            android:layout_height="wrap_content"
+            android:text="리처드 도킨스"
             android:textColor="@color/black"
             android:textSize="18sp" />
 
@@ -119,16 +119,27 @@
     <!--    </LinearLayout>-->
 
     <TextView
-        android:id="@+id/searchedPublisher"
+        android:id="@+id/txt_publisher"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
         android:layout_marginTop="5dp"
+        android:text="출판사: "
+        android:textColor="@color/black"
+        android:textSize="18dp"
+        app:layout_constraintStart_toEndOf="@id/searchedPoster"
+        app:layout_constraintTop_toBottomOf="@+id/author"
+        android:layout_marginLeft="15dp"/>
+
+    <TextView
+        android:id="@+id/searchedPublisher"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
         android:text="을유문화사"
+        android:layout_marginTop="5dp"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@id/searchedPoster"
-        app:layout_constraintTop_toBottomOf="@id/author" />
+        app:layout_constraintTop_toBottomOf="@+id/author"
+        app:layout_constraintStart_toEndOf="@id/txt_publisher"/>
 
     <TextView
         android:id="@+id/searchedISBN"
