--- a/app/src/main/res/layout/activity_book_details.xml
+++ b/app/src/main/res/layout/activity_book_details.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -18,7 +19,7 @@
 
     <TextView
         android:id="@+id/txt_book_title"
-        android:layout_width="wrap_content"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="40dp"
@@ -33,15 +34,16 @@
         android:id="@+id/years"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="5dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="@id/txt_book_title"
-        app:layout_constraintStart_toEndOf="@id/txt_book_title">
+        app:layout_constraintTop_toBottomOf="@id/txt_book_title"
+        app:layout_constraintStart_toEndOf="@id/searched_detail_img">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="("
+            android:text="발행일: "
             android:textColor="@color/black"
             android:textSize="18dp"
             android:textStyle="bold" />
@@ -59,14 +61,6 @@
             app:layout_constraintStart_toEndOf="@id/searchedPoster"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=")"
-            android:textColor="@color/black"
-            android:textSize="18dp"
-            android:textStyle="bold" />
-
     </LinearLayout>
 
     <LinearLayout
@@ -77,28 +71,30 @@
         android:layout_marginTop="8dp"
         android:orientation="horizontal"
         app:layout_constraintStart_toEndOf="@+id/searched_detail_img"
-        app:layout_constraintTop_toBottomOf="@+id/txt_book_title">
-
-        <TextView
-            android:id="@+id/searchedAuthor"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="리처드 도킨스"
-            android:textColor="@color/black"
-            android:textSize="18sp" />
+        app:layout_constraintTop_toBottomOf="@+id/years">
 
         <TextView
             android:id="@+id/txt_author"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=" 지음"
+            android:text="저자: "
             android:textColor="@color/black"
             android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/searchedAuthor"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:text="리처드 도킨스"
+            android:textColor="@color/black"
+            android:textSize="18sp" />
+
+
 
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/translation"
+        android:id="@+id/publisher"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
@@ -109,35 +105,35 @@
         app:layout_constraintTop_toBottomOf="@+id/author">
 
         <TextView
-            android:id="@+id/searchedTranslator"
+            android:id="@+id/txt_publisher"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="홍영남"
+            android:text="출판사: "
             android:textColor="@color/black"
             android:textSize="18sp" />
 
         <TextView
-            android:id="@+id/txt_translation"
-            android:layout_width="wrap_content"
+            android:id="@+id/searchedPublisher"
+            android:layout_width="130dp"
             android:layout_height="wrap_content"
-            android:text=" 옮김"
+            android:text="홍영남"
             android:textColor="@color/black"
             android:textSize="18sp" />
 
     </LinearLayout>
 
     <TextView
-        android:id="@+id/searchedPublisher"
+        android:id="@+id/isbn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="8dp"
-        android:text="을유문화사"
+        android:text="1111"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/searched_detail_img"
-        app:layout_constraintTop_toBottomOf="@+id/translation" />
+        app:layout_constraintTop_toBottomOf="@+id/publisher" />
 
     <TextView
         android:id="@+id/txt_book_summary"
@@ -167,7 +163,7 @@
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
-        android:text="RENTAL"
+        android:text="대출"
         app:layout_constraintEnd_toStartOf="@+id/btn_return"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txt_storyline" />
@@ -176,11 +172,22 @@
         android:id="@+id/btn_return"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:text="RETURN"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="35dp"
+        android:text="반납"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/btn_rental"
         app:layout_constraintTop_toBottomOf="@+id/txt_storyline" />
+
+    <Button
+        android:id="@+id/btn_keep"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:background="#89888C"
+        android:text="찜하기"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_rental" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
