--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -44,6 +44,19 @@
         android:layout_margin="10dp"/>
 
     <TextView
+        android:id="@+id/txt_before_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="서비스를 이용하시려면 로그인하세요."
+        android:textColor="@color/black"
+        android:textSize="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="invisible"/>
+
+    <TextView
         android:id="@+id/txt_keep"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
